--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "mman.h": "c",
         "png.h": "c",
         "input.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "linklist.h": "c"
     }
 }
