--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "typeinfo": "c",
         "*.tcc": "c",
         "fstream": "c",
-        "kernel_list.h": "c"
+        "kernel_list.h": "c",
+        "math.h": "c"
     }
 }
